--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=df854b983471db9ac7e1693f02561fa4"
-    ></script>
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=df854b983471db9ac7e1693f02561fa4&libraries=services"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
