--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
 			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services"
 		></script>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="./assets/favicon.ico" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"
@@ -34,22 +34,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-		<title>React App</title>
+		<title>나도 땀</title>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-
 		<div id="root"></div>
 		<div id="modal"></div>
-		<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 	</body>
 </html>
